0031801: Samples: Overview QT - Problems with displaying a torus in shading mode (only for Convert to NURBS) Adjacent faces shading visualization problem solved